--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/gavin-feng/HelloWorld">View on GitHub</a>
 
           <h1 id="project_title">Helloworld</h1>
-          <h2 id="project_tagline">GitStudy</h2>
+          <h2 id="project_tagline">I love guyinghui</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/gavin-feng/HelloWorld/zipball/master">Download this project as a .zip file</a>
